duniverse/menhirLib.20200211/test/static/bad/inline-attribute-use.mly
%token A B
%start<unit> main
%%
main:
  foo [@cost 0] {}

%inline foo:
  A B {}
